2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.CodeGeneration/NullCheckGenerator.cs:
	* MonoDevelop.CodeGeneration/AbstractGenerateAction.cs: Added
	  NullCheckGenerator from Scott Thomas <scpeterson@novell.com>

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	  Not longer possible to remove backing stores when the field
	  has attributes.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CodeGeneration/AbstractGenerateAction.cs: Fixed
	  parameter members in the code generation action.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/Change.cs:
	* MonoDevelop.Refactoring/RefactoringService.cs: Refactorings
	  are now atomic.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	* MonoDevelop.Refactoring.ConvertPropery/CreateBackingStore.cs:
	  Worked on refactoring.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring/RefactoringService.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* MonoDevelop.Refactoring.ConvertPropery/PropertyVisitor.cs:
	* MonoDevelop.Refactoring.ConvertPropery/CreateBackingStore.cs:
	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	  Improved "remove backing store"/implemented support for
	  overlapping changes.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/CreateBackingStore.cs:
	  Improved backing store name creation.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring.ConvertPropery:
	* MonoDevelop.Refactoring/HelperMethods.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: