@@ -81,7 +81,7 @@ namespace MonoDevelop.CodeGeneration
 					yield break;
 				
 				foreach (var parameter in Options.EnclosingMember.Parameters) {
-					IType type = Options.Dom.GetType (parameter.ReturnType);
+					IType type = Options.Dom.SearchType (new SearchTypeRequest (Options.Document.CompilationUnit, parameter.Location.Line, parameter.Location.Column, parameter.ReturnType.FullName, parameter.ReturnType.GenericArguments));
 					if (type != null && (type.ClassType == MonoDevelop.Projects.Dom.ClassType.Interface || type.ClassType == MonoDevelop.Projects.Dom.ClassType.Class))
 						yield return parameter;
 				}
